# new_project

./: README.md  data-architecture.md  data-transformation.md
airflow/: Dockerfile.cache  Makefile  airflow.yml  mysql.yml  pyproject.toml
airflow/dataflow/: constant.py
airflow/dataflow/backend/db/: clients.py  db.py  router.py
airflow/dataflow/crawler/: Vtuber_SuperChat.py
airflow/dataflow/dags/: Vtuber_SuperChat.py
airflow/dataflow/etl/: Vtuber_SuperChat.py
airflow/dataflow/schema/: dataset.py
poetry-demo/: .coverage  .env  .gitlab-ci.yml  Dockerfile  Dockerfile_api  Makefile  README.md  api.yml  crawler.yml  create_table.sql  docker-compose.yml  local.ini  mysql.yml  pyproject.toml  rabbitmq.yml  redash.yml  scheduler.yml  test.py  traefik.yml
poetry-demo/api/: Makefile  api.yml  config.py  main.py
poetry-demo/tests/crawler/: test_Vtuber_SuperChat.py
poetry-demo/vtuberdata/: config.py  producer.py  scheduler.py  scheduler.yml
poetry-demo/vtuberdata/backend/db/: clients.py
poetry-demo/vtuberdata/crawler/: Vtuber_SuperChat.py  test.py
poetry-demo/vtuberdata/schema/: dataset.py
poetry-demo/vtuberdata/tasks/: task.py  worker.py
