[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "vtuberdata" },
    { include = "vtuberdata/backend/db/clients.py" },
    { include = "vtuberdata/schema/dataset.py" },
    { include = "vtuberdata/backend/db/db.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pandas = "^2.2.2"
requests = "^2.31.0"
pydantic = "^2.6.2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.29"
pymysql = "^1.1.0"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
tqdm = "^4.66.2"
pytest = "^8.1.1"
requests-html = "^0.10.0"
lxml = {extras = ["html-clean"], version = "^5.2.1"}
mysql-connector-python = "^8.3.0"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
