[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "vtuberdata" },
    { include = "vtuberdata/backend/db/clients.py" },
    { include = "vtuberdata/schema/dataset.py" },
    { include = "vtuberdata/backend/db/db.py" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = ">=2.2,<2.3"
pandas = "^2.2.2"
requests = "^2.31.0"
pydantic = "^2.6.2"
loguru = "^0.7.2"
sqlalchemy = ">=1.4.36,<2.0"
pymysql = "^1.1.0"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
tqdm = "^4.66.2"
pytest = "^8.1.1"
requests-html = "^0.10.0"
lxml = {extras = ["html-clean"], version = "^5.2.1"}
mysql-connector-python = "^8.3.0"
celery = {extras = ["redis"], version = "^5.4.0"}
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
apache-airflow = "^2.9.1"
apache-airflow-providers-docker = "^3.12.0"
apache-airflow-providers-celery = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
